# win-tool

./: .gitignore  BUILD.md  Cargo.toml  DEPENDENCIES.md  EXAMPLES.md  QUICKSTART.md  README.md  build.bat  setup.ps1
data/: README.md
data/config_templates/firefox/: pref.js
src/: main.rs
src/modules/: explorer.rs  mod.rs  packages.rs  personalization.rs  system.rs  uwp.rs
src/tui/: checkbox.rs  menu.rs  mod.rs
src/utils/: admin.rs  filesystem.rs  mod.rs  registry.rs
